[package]
name = "v4l2-capture-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
description = "A short description of this package"
documentation = "Path to Documentation"
authors = ["Sojan James <sojan.james@gmail.com>"]
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.TXT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sabaton-mw = { git = "https://github.com/sabaton-rs/sabaton-mw.git"}
clap = { version= "3", features = ["cargo"]}
tracing = "0.1"
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.3"
v4l = {version = "0.13", features = ["v4l2"]}


## Topics and Interfaces this Application depends on
## Interfaces
robotics-signals = "0.1.0"

## Topics

[profile.release]
overflow-checks = true
